PCI8154/Library/Include/pci_8154.h

I16 FNTYPE _8154_db51_HSL_M_start_sr_move(I16 card_ID, I16 AxisNo, F64 Dist, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_move(I16 card_ID, I16 AxisNo, F64 Pos, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_set_move_ratio(I16 card_ID, I16 AxisNo, F64 move_ratio);
I16 FNTYPE _8154_db51_HSL_M_p_change(I16 card_ID, I16 AxisNo, F64 NewPos);
I16 FNTYPE _8154_db51_HSL_M_backlash_comp(I16 card_ID, I16 AxisNo, I16 BCompPulse, I16 Mode);
I16 FNTYPE _8154_db51_HSL_M_suppress_vibration(I16 card_ID, I16 AxisNo, U16 T1, U16 T2);
I16 FNTYPE _8154_db51_HSL_M_set_idle_pulse(I16 card_ID, I16 AxisNo, I16 idl_pulse);
I16 FNTYPE _8154_db51_HSL_M_set_fa_speed(I16 card_ID, I16 AxisNo, F64 FA_Speed);
// Point Table
I16 FNTYPE _8154_db51_HSL_M_set_point_data(I16 card_ID, I16 Dimension, I16 *AxisArray, I16 point_index, I16 cmd_func, F64 *DistArray, F64 MaxVel);
I16 FNTYPE _8154_db51_HSL_M_set_arc_data(I16 card_ID, I16 *AxisArray, I16 point_index, I16 cmd_func, F64 *CenterArray, F64 *EndArray, I16 DIR, F64 MaxVel);
I16 FNTYPE _8154_db51_HSL_M_move_point_range(I16 card_ID, I16 Dimension, I16 *AxisArray, I16 start_index, I16 last_index);
I16 FNTYPE _8154_db51_HSL_M_move_point_table(I16 card_ID, I16 Dimension, I16 *AxisArray, I16 *PointArray, I16 total_points);
// Linear Interpolated Motion
I16 FNTYPE _8154_db51_HSL_M_start_tr_move_xy(I16 card_ID, I16 M_No, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_move_xy(I16 card_ID, I16 M_No, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_sr_move_xy(I16 card_ID, I16 M_No, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_move_xy(I16 card_ID, I16 M_No, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_tr_move_zu(I16 card_ID, I16 M_No, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_move_zu(I16 card_ID, I16 M_No, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_sr_move_zu(I16 card_ID, I16 M_No, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_move_zu(I16 card_ID, I16 M_No, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_tr_line2(I16 card_ID, I16 *AxisArray, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_line2(I16 card_ID, I16 *AxisArray, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_sr_line2(I16 card_ID, I16 *AxisArray, F64 DistX, F64 DistY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_line2(I16 card_ID, I16 *AxisArray, F64 PosX, F64 PosY, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_tr_line3(I16 card_ID, I16 *AxisArray, F64 DistX, F64 DistY, F64 DistZ, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_line3(I16 card_ID, I16 *AxisArray, F64 PosX, F64 PosY, F64 PosZ, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_sr_line3(I16 card_ID, I16 *AxisArray, F64 DistX, F64 DistY, F64 DistZ, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_line3(I16 card_ID, I16 *AxisArray, F64 PosX, F64 PosY, F64 PosZ, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_tr_line4(I16 card_ID, I16 M_No, F64 DistX, F64 DistY, F64 DistZ, F64 DistU, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_ta_line4(I16 card_ID, I16 M_No, F64 PosX, F64 PosY, F64 PosZ, F64 PosU, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec);
I16 FNTYPE _8154_db51_HSL_M_start_sr_line4(I16 card_ID, I16 M_No, F64 DistX, F64 DistY, F64 DistZ, F64 DistU, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
I16 FNTYPE _8154_db51_HSL_M_start_sa_line4(I16 card_ID, I16 M_No, F64 PosX, F64 PosY, F64 PosZ, F64 PosU, F64 StrVel, F64 MaxVel, F64 Tacc, F64 Tdec, F64 SVacc, F64 SVdec);
// Circular Interpolation Motion
I16 FNTYPE _8154_db51_HSL_M_start_r_arc_xy(I16 card_ID, I16 M_No, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 MaxVel);
I16 FNTYPE _8154_db51_HSL_M_start_a_arc_xy(I16 card_ID, I16 M_No, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 MaxVel);
I16 FNTYPE _8154_db51_HSL_M_start_r_arc_zu(I16 card_ID, I16 M_No, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 MaxVel);
I16 FNTYPE _8154_db51_HSL_M_start_a_arc_zu(I16 card_ID, I16 M_No, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 MaxVel);
I16 FNTYPE _8154_db51_HSL_M_start_r_arc2(I16 card_ID, I16 *AxisArray, F64 OffsetCx, F64 OffsetCy, F64 OffsetEx, F64 OffsetEy, I16 DIR, F64 MaxVel);
I16 FNTYPE _8154_db51_HSL_M_start_a_arc2(I16 card_ID, I16 *AxisArray, F64 Cx, F64 Cy, F64 Ex, F64 Ey, I16 DIR, F64 MaxVel);