PCI8154/Library/Include/pci_8154.bas

Declare Function B_8154_db51_HSL_M_start_sr_move Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_move" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Dist As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_move Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_move" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal Pos As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_set_move_ratio Lib "8154.dll" Alias "_8154_db51_HSL_M_set_move_ratio" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal move_ratio As Double) As Integer
Declare Function B_8154_db51_HSL_M_p_change Lib "8154.dll" Alias "_8154_db51_HSL_M_p_change" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal NewPos As Double) As Integer
Declare Function B_8154_db51_HSL_M_backlash_comp Lib "8154.dll" Alias "_8154_db51_HSL_M_backlash_comp" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal BCompPulse As Integer, ByVal mode As Integer) As Integer
Declare Function B_8154_db51_HSL_M_suppress_vibration Lib "8154.dll" Alias "_8154_db51_HSL_M_suppress_vibration" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal T1 As Integer, ByVal T2 As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_idle_pulse Lib "8154.dll" Alias "_8154_db51_HSL_M_set_idle_pulse" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal idl_pulse As Integer) As Integer
Declare Function B_8154_db51_HSL_M_set_fa_speed Lib "8154.dll" Alias "_8154_db51_HSL_M_set_fa_speed" (ByVal card_ID As Integer, ByVal AxisNo As Integer, ByVal FA_Speed As Double) As Integer
'
'  Point Table
Declare Function B_8154_db51_HSL_M_set_point_data Lib "8154.dll" Alias "_8154_db51_HSL_M_set_point_data" (ByVal card_ID As Integer, ByVal Dimension As Integer, AxisArray As Integer, ByVal point_index As Integer, ByVal cmd_func As Integer, DistArray As Double, ByVal MaxVel As Double) As Integer
Declare Function B_8154_db51_HSL_M_set_arc_data Lib "8154.dll" Alias "_8154_db51_HSL_M_set_arc_data" (ByVal card_ID As Integer, AxisArray As Integer, ByVal point_index As Integer, ByVal cmd_func As Integer, CenterArray As Double, EndArray As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8154_db51_HSL_M_move_point_range Lib "8154.dll" Alias "_8154_db51_HSL_M_move_point_range" (ByVal card_ID As Integer, ByVal Dimension As Integer, AxisArray As Integer, ByVal start_index As Integer, ByVal last_index As Integer) As Integer
Declare Function B_8154_db51_HSL_M_move_point_table Lib "8154.dll" Alias "_8154_db51_HSL_M_move_point_table" (ByVal card_ID As Integer, ByVal Dimension As Integer, AxisArray As Integer, PointArray As Integer, ByVal total_points As Integer) As Integer
'
'  Linear Interpolated Motion
Declare Function B_8154_db51_HSL_M_start_tr_move_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_move_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_move_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_move_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sr_move_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_move_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_move_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_move_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_tr_move_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_move_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_move_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_move_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sr_move_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_move_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_move_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_move_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_tr_line2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_line2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_line2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_line2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sr_line2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_line2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_line2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_line2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_tr_line3 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_line3" (ByVal card_ID As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal DistZ As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_line3 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_line3" (ByVal card_ID As Integer, AxisArray As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal PosZ As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sr_line3 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_line3" (ByVal card_ID As Integer, AxisArray As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal DistZ As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_line3 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_line3" (ByVal card_ID As Integer, AxisArray As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal PosZ As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_tr_line4 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_tr_line4" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal DistZ As Double, ByVal DistU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_ta_line4 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_ta_line4" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal PosZ As Double, ByVal PosU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sr_line4 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sr_line4" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal DistX As Double, ByVal DistY As Double, ByVal DistZ As Double, ByVal DistU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_sa_line4 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_sa_line4" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal PosX As Double, ByVal PosY As Double, ByVal PosZ As Double, ByVal PosU As Double, ByVal StrVel As Double, ByVal MaxVel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal SVacc As Double, ByVal SVdec As Double) As Integer
'
'  Circular Interpolation Motion
Declare Function B_8154_db51_HSL_M_start_r_arc_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_r_arc_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_a_arc_xy Lib "8154.dll" Alias "_8154_db51_HSL_M_start_a_arc_xy" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_r_arc_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_r_arc_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_a_arc_zu Lib "8154.dll" Alias "_8154_db51_HSL_M_start_a_arc_zu" (ByVal card_ID As Integer, ByVal M_No As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_r_arc2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_r_arc2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal OffsetCx As Double, ByVal OffsetCy As Double, ByVal OffsetEx As Double, ByVal OffsetEy As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
Declare Function B_8154_db51_HSL_M_start_a_arc2 Lib "8154.dll" Alias "_8154_db51_HSL_M_start_a_arc2" (ByVal card_ID As Integer, AxisArray As Integer, ByVal Cx As Double, ByVal Cy As Double, ByVal Ex As Double, ByVal Ey As Double, ByVal DIR As Integer, ByVal MaxVel As Double) As Integer
